--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
                 <option value="0">Simétrico</option>
                 <option value="1">Asimétrico</option>
             </select>              
-            <form action="#" id="formDigitales">
+            <form  id="formDigitales">
 
-                <input class="file-input" type="file" name="file" hidden multiple>
+                <input class="file-input" type="file" name="file" hidden>
                 <i class="fas fa-cloud-upload-alt"></i>
                 </form>
                 <section class="uploaded-area"></section>
